Moved config file to Project and all issues regarding changes in config file are solved

--- a/Prague Parking V2/Prague Parking V2.csproj
+++ b/Prague Parking V2/Prague Parking V2.csproj
@@ -9,6 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="configData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="configData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Spectre.Console" Version="0.52.0" />
   </ItemGroup>
 
