--- a/TestProjectPragueParking/TestProjectPragueParking.csproj
+++ b/TestProjectPragueParking/TestProjectPragueParking.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="MSTest" Version="3.6.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LibraryPragueParking.Data\LibraryPragueParking.Data.csproj" />
+    <ProjectReference Include="..\Prague Parking V2\Prague Parking V2.csproj" />
   </ItemGroup>
 
   <ItemGroup>
