Added comments and changes name on library

--- a/Prague Parking V2/Prague Parking V2.csproj
+++ b/Prague Parking V2/Prague Parking V2.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraryPragueParking.Data\LibraryPragueParking.Data.csproj" />
+    <ProjectReference Include="..\LibraryPragueParking.Data\PragueParking.Data.csproj" />
   </ItemGroup>
 
 </Project>
