--- a/TestProjectPragueParking/PragueParkingV2.tests.csproj
+++ b/TestProjectPragueParking/PragueParkingV2.tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibraryPragueParking.Data\LibraryPragueParking.Data.csproj" />
+    <ProjectReference Include="..\LibraryPragueParking.Data\PragueParking.Data.csproj" />
     <ProjectReference Include="..\Prague Parking V2\Prague Parking V2.csproj" />
   </ItemGroup>
 
